Fix diagram ordering bug